@@ -1,3 +1,6 @@
+21 April 2015: Wouter
+	- nsd-control addzones and delzones read list of zones from stdin.
+
 20 April 2015: Wouter
 	- Fix #665: when removing subdomain, nsd does not reparse parent zone.
 
